# forkguard-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  rust.yml
benches/: overhead.rs
src/: atfork.rs  lib.rs  noop.rs  pid.rs
tests/: basic.rs  multiple_forks.rs  multiple_guards.rs  noop_guard.rs
